fix horizontal scrolling

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,8 @@ html {
 
 body {
 	height: 100%;
+	width: 100%;
+	overflow-x: hidden;
 }
 
 #menu-bar {
